--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
 * {
 	box-sizing: border-box;
 }
-
 body {
 	padding-top: 4rem;
 	margin: 0;
@@ -12,40 +11,36 @@ body {
 	--type-second: 'Spectral', georgia;
 	font-family: var(--type-first);
 }
-
 h1, h2, h3, h4, p {
 	margin: 0;
 }
-
 ul, li {
 	list-style: none;
 	padding: 0;
 	margin: 0;
 }
-
 img {
 	display: block;
 	max-width: 100%;
 }
-
 button, input {
 	display: block;
 	font-size: 1rem;
 	font-family: var(--type-first);
 	color: #333;
 }
-
 a {
 	text-decoration: none;
 	color: #333;
 }
-
 .container {
 	max-width: 50rem;
 	padding: 0 1rem;
 	margin: 0 auto;
 }
-
+.mainContainer {
+	margin-top: 4rem;
+}
 .title {
 	font-family: var(--type-second);
 	line-height: 1;
@@ -54,7 +49,6 @@ a {
 	position: relative;
 	z-index: 1;
 }
-
 .title::after {
 	content: '';
 	display: block;
@@ -67,13 +61,11 @@ a {
 	border-radius: .2rem;
 	z-index: -1;
 }
-
 .animeLeft {
 	opacity: 0;
 	transform: translateX(-20px);
 	animation: animeLeft .3s forwards;
 }
-
 @keyframes animeLeft {
 	to {
 		opacity: 1;
