--- a/src/Components/Photo/PhotoComments.module.css
+++ b/src/Components/Photo/PhotoComments.module.css
@@ -3,6 +3,9 @@
 	word-break: break-word;
 	padding: 0 2rem;
 }
+.single.comments {
+	padding: 0;
+}
 .comments li {
 	margin-bottom: .5rem;
 	line-height: 1.2;
