--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,14 @@ a {
 	text-decoration: none;
 	color: #333;
 }
+.App {
+	display: flex;
+	flex-direction: column;
+	min-height: calc(100vh + 10rem);
+}
+.AppBody {
+	flex: 1;
+}
 .container {
 	max-width: 50rem;
 	padding: 0 1rem;
